--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,6 +18,22 @@ collections:
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
+      - label: "Post Author"
+        name: "author"
+        widget: "relation"
+        collection: "authors"
+        searchFields: ["name"]
+        valueField: "name"
+        displayFields: ["name"]
+
+  - name: "authors"
+    label: "Author"
+    folder: "src/pages/authors"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
 
   - name: "pages"
     label: "Pages"
